--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test:ci": "npm-run-all -s test:compile server:ci"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@reach/router": "^1.3.4",
