--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@reach/router": "^1.3.4",
@@ -70,13 +71,16 @@
     "polished": "^3.6.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-feather": "^2.0.9",
     "react-flag-icon-css": "^1.0.25",
     "react-flags-select": "^1.1.13",
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.7.0",
-    "react-icons": "^3.11.0",
+    "react-icons": "^4.2.0",
     "react-select": "^3.1.0",
+    "react-social-media-icons": "^1.1.0",
     "react-spring": "^8.0.27",
+    "social-media-icons-react": "^1.1.2",
     "styled-components": "^5.1.1",
     "styled-system": "^5.1.5",
     "typeface-roboto": "^0.0.75",
