--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.7.0",
     "react-icons": "^4.2.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-select": "^3.1.0",
     "react-social-media-icons": "^1.1.0",
     "react-spring": "^8.0.27",
